# summarizer-pdf

./: .gitignore  README.md  context.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  Makefile  adv_summ.py  app.py  main.py  pyproject.toml  requirements.txt  schemas.py  setup_nltk.py
backend/process_documented/: context.md
backend/tests/: test_adv_summ.py  test_app.py  test_schemas.py
frontend/: .dockerignore  .prettierrc  Dockerfile  package-lock.json  package.json  vitest.config.ts
frontend/src/__tests__/: page.test.tsx  setup.ts
frontend/src/app/: .gitignore  globals.css  layout.tsx  page.tsx
frontend/src/components/: error-boundary.tsx
frontend/src/components/ui/: button.tsx  input.tsx  progress.tsx
frontend/src/types/: api.ts
