[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-summarizer-backend"
version = "1.0.0"
description = "PDF Summarizer backend with Flask - uses multiple NLP algorithms and Gemini AI"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Devdeep", email = "devdeep@example.com"},
]
dependencies = [
    "Flask>=3.1.0",
    "Flask-CORS>=5.0.1",
    "pypdf>=5.2.0",
    "nltk>=3.9.1",
    "python-dotenv>=1.0.1",
    "gunicorn>=23.0.0",
    "scikit-learn>=1.6.1",
    "numpy>=2.2.3",
    "scipy>=1.15.2",
    "google-generativeai>=0.8.6",
    "pydantic>=2.10.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-flask>=1.3.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
